# SoftProject1-OpenDoc

./: .env.example  .gitignore  AI1220_assignment_full_en.md  CLAUDE.md  CurrentStateReport.md  DEVIATIONS.md  GIORGI.md  Makefile  Part 1.md  Part 2.md  Part 3.md  README.md  TASKS.md  docker-compose.yml  run.sh
C4-diagram/: level-1.puml  level-2.puml  level-3.puml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_ai_streaming_metadata.py  20260419_0002_ai_prompt_text_columns.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ai_jobs.py  audit.py  deps.py  documents.py  health.py  shares.py  users.py  versions.py  workspaces.py
backend/app/models/: __init__.py  ai_interaction.py  ai_suggestion.py  audit_event.py  document.py  document_share.py  document_version.py  user.py  workspace.py
backend/app/realtime/: websocket.py
backend/app/schemas/: ai.py  common.py  document.py  user.py
backend/app/services/: permissions.py
backend/app/services/ai/: ai_service.py  job_registry.py
backend/app/services/ai/prompts/: templates.json  templates.py
backend/app/services/ai/providers/: base.py  claude.py  mock.py  ollama.py  openai.py
backend/app/tests/: conftest.py  test_ai.py  test_ai_jobs_permissions.py  test_audit.py  test_auth.py  test_documents.py  test_documents_permissions.py  test_export.py  test_health.py  test_realtime.py  test_share_links.py  test_shares.py  test_versions.py  test_versions_permissions.py  test_ws_auth.py
frontend/: package-lock.json  (+3 more)
(+24 files in other folders)
